<resources>
    <string name="app_name">TechnicalTask</string>

    <string name="sign_in">

Sign in
</string>

    <string name="email">

Email
</string>

    <string name="first_name">

First name
</string>

    <string name="last_name">

Last name
</string>

    <string name="already_hav">

Already have an account?
</string>

    <string name="log_in">

Log in
</string>

    <string name="sign_in_wit">

Sign in with Google
</string>

    <string name="sign_in_with">

Sign in with Apple
</string>

    <string name="welcome_bac">

Welcome back
</string>

    <string name="login">

Login
</string>

    <string name="profile">

Profile
</string>

    <string name="change_phot">

Change photo
</string>

    <string name="satria_adhi">

Satria Adhi Pradana
</string>

    <string name="upload_item">

Upload item
</string>

    <string name="trade_store">

Trade store
</string>

    <string name="payment_met">

Payment method
</string>

    <string name="balance">

Balance
</string>

    <string name="trade_histo">

Trade history
</string>

    <string name="restore_pur">

Restore Purchase
</string>

    <string name="help">

Help
</string>

    <string name="log_out">

Log out
</string>

    <string name="some_id">

$ 1593
</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>