<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignInPage"
     >

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="127dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="235dp"
        android:background="@drawable/rectangle_2"

        android:fontFamily="@font/montserrat"
        android:textSize="11sp"
        android:hint="@string/first_name"
        android:textAppearance="@style/first_name"
        android:gravity="center|center_horizontal"
        />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="299dp"
        android:background="@drawable/rectangle_3"

        android:fontFamily="@font/montserrat"
        android:textSize="11sp"
        android:hint="@string/last_name"
        android:textAppearance="@style/last_name"
        android:gravity="center|center_horizontal"
        />

    <EditText
        android:id="@+id/e_mail"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="363dp"
        android:background="@drawable/rectangle_5"

        android:fontFamily="@font/montserrat"
        android:gravity="center|center_horizontal"
        android:hint="@string/email"
        android:textSize="11sp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />



    <Button
        android:id="@+id/button"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="427dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat"

        android:textSize="14sp"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        android:gravity="center_horizontal|top"
        />


    <TextView
        android:id="@+id/already_hav"
        android:layout_width="129dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="488dp"
        android:fontFamily="@font/montserrat"
        android:gravity="top"
        android:text="@string/already_hav"
        android:textAppearance="@style/already_hav" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="35dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="170dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="488dp"
        android:text="@string/log_in"
        android:textAppearance="@style/log_in"
        android:gravity="center_horizontal|top"
        android:fontFamily="@font/montserrat"
        />


    <TextView
        android:id="@+id/sign_in_wit"
        android:layout_width="117dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="134dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="580dp"
        android:text="@string/sign_in_wit"
        android:textAppearance="@style/sign_in_wit"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/sign_in_with"
        android:layout_width="107dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="131dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="640.22dp"
        android:text="@string/sign_in_with"
        android:textAppearance="@style/sign_in_wit"
        android:gravity="top"
        />

    <ImageView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:layout_marginLeft="99dp"
        android:background="@drawable/google"
        />

    <ImageView
        android:id="@+id/apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="640.22dp"
        android:layout_marginStart="99dp"
        android:background="@drawable/apple"
        />



</FrameLayout>